[package]
name = "embed_cid_dump"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.16.0"
async-std = {version = "1.9.0", features = ["attributes"]}
anyhow = { version = "1", features = ["backtrace"] }

libipld = "0.14.0"
rand = "0.8.5"
base32 = "0.4.0"
futures = "0.3.21"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
ipfs-embed = "0.26.0"
